# cuda-path-tracer

./: .gitignore  CMakeLists.txt  README.md
scenes/cornell-box/: cornell-box.json  cornell-box.mtl
scenes/cornell-box-glass/: cornell-box.json  cornell-box.mtl
src/: main.cpp
src/cuda_helpers/: buffer.cpp  buffer.hpp  texture.cpp  texture.hpp
src/kernels/accel/: accel.cuh  accel_build.cu  accel_build.cuh
src/kernels/basic/: frame.cuh  prelude.cuh  ray.cuh
src/kernels/bsdf/: blinn_phong.cuh  bsdf.cuh  common.cuh  glass.cuh  lambert.cuh  microfacet.cuh  phong.cuh
src/kernels/camera/: camera.cuh  pinhole.cuh
src/kernels/geometry/: common.cuh  geometry.cuh  trimesh.cuh
src/kernels/integrator/: common.cuh  path.cu  path.cuh
src/kernels/light/: common.cuh  directional.cuh  geometry.cuh  light.cuh
src/kernels/material/: common.cuh  lambert.cuh  material.cuh  mtl.cuh
src/kernels/sampler/: common.cuh  random.cuh  sampler.cuh
src/kernels/scene/: instance.cuh  scene.cuh
src/pathtracer/: film.cpp  film.hpp  pathtracer.cpp  pathtracer.hpp
src/scene/: camera.cpp  camera.hpp  core.cpp  core.hpp  loader.cpp  loader.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp
src/window/: window.cpp  window.hpp
